cluster/gateway-traefik.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-external
spec:
  controllerName: traefik.io/gateway-controller

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik-external
  listeners:
    - name: web
      protocol: HTTP
      port: 80
      hostname: "*.hattmo.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      protocol: HTTPS
      port: 443
      hostname: "*.hattmo.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: hattmo-tls
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All
