cluster/argocd.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-ui
spec:
  parentRefs:
    - name: private
      namespace: default
      sectionName: https
  hostnames:
    - argo.hattmo.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
